Create etch-a-sketch UI with grid

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <script src="main.js" defer></script>
 </head>
 <body>
-    <div class="grid-container">
-    </div>
+    <div class="grid-border">
+        <div class="title">ETCH-A-SKETCH</div>
+        <div class="grid-container"></div> 
+    </div>                                                                                                          
 </body>
 </html>
