Add clear button and event listener

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
     <div class="grid-border">
         <div class="title">ETCH-A-SKETCH</div>
+        <div class="tools">
+            <button id="clear">CLEAR</button>
+        </div>
         <div class="grid-container"></div> 
     </div>                                                                                                          
 </body>
