Add inputs and new grid button to index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <div class="grid-border">
         <div class="title">ETCH-A-SKETCH</div>
         <div class="tools">
-            <button id="clear">CLEAR</button>
+            <input type="text" value="Rows">
+            x
+            <input type="text" name="Columns">
+            <button id="new-grid">New Grid</button>
+            <button id="clear">Clear</button>
         </div>
         <div class="grid-container"></div> 
     </div>                                                                                                          
