Create row and col input functionality

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="grid-border">
         <div class="title">ETCH-A-SKETCH</div>
         <div class="tools">
-            <input type="text" value="Rows">
+            <input placeholder="Rows" class="row">
             x
-            <input type="text" name="Columns">
+            <input placeholder="Columns" class="column">
             <button id="new-grid">New Grid</button>
             <button id="clear">Clear</button>
         </div>
